# nonSUSYorbifolder

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  betamodel288.txt  comandos.txt  config.status  configure  configure.ac  libtool  model288.txt  model4902.txt  model7635.txt  modelSMz8II2.txt  modelnoexots.txt  pract-actualization-may19.txt  practpromptrandom1.txt  practpromptrandom2.txt  practpromptrandom3.txt  practpromptrandom4.txt  practpromptrandom5.txt  practpromptrandom6.txt  program.txt  randSMZ3-6-4inequiv-may19.txt  randSMZ3-may19.txt  randmodelsZ3-8-5ineq-m19.txt  randmodelsZ3-m19.txt
Config/: config.h  config.h.in
GaugeInvariance/: gauge_invariance_A1.txt  gauge_invariance_A10.txt  gauge_invariance_A11.txt  gauge_invariance_A12.txt  gauge_invariance_A2.txt  gauge_invariance_A3.txt  gauge_invariance_A4.txt  gauge_invariance_A5.txt  gauge_invariance_A6.txt  gauge_invariance_A7.txt  gauge_invariance_A8.txt  gauge_invariance_A9.txt  gauge_invariance_D10.txt  gauge_invariance_D11.txt  gauge_invariance_D12.txt  gauge_invariance_D13.txt  gauge_invariance_D4.txt  gauge_invariance_D5.txt  gauge_invariance_D6.txt  gauge_invariance_D7.txt  gauge_invariance_D8.txt  gauge_invariance_D9.txt  gauge_invariance_E6.txt  gauge_invariance_E7.txt  gauge_invariance_E8.txt  non_gauge_invariance_A1.txt  non_gauge_invariance_A10.txt  non_gauge_invariance_A11.txt  non_gauge_invariance_A12.txt  non_gauge_invariance_A2.txt  non_gauge_invariance_A3.txt  non_gauge_invariance_A4.txt  non_gauge_invariance_A5.txt  non_gauge_invariance_A6.txt  non_gauge_invariance_A7.txt  non_gauge_invariance_A8.txt  non_gauge_invariance_A9.txt  non_gauge_invariance_D10.txt  non_gauge_invariance_D11.txt  non_gauge_invariance_D12.txt  (+10 more)
Geometry/: Geometry_Z12-II_1_1.txt  Geometry_Z12-I_1_1.txt  Geometry_Z12-I_2_1.txt  Geometry_Z2xZ2_10_1.txt  Geometry_Z2xZ2_10_2.txt  Geometry_Z2xZ2_11_1.txt  Geometry_Z2xZ2_12_1.txt  Geometry_Z2xZ2_12_2.txt  Geometry_Z2xZ2_1_1.txt  Geometry_Z2xZ2_1_2.txt  Geometry_Z2xZ2_1_3.txt  Geometry_Z2xZ2_1_4.txt  Geometry_Z2xZ2_2_1.txt  Geometry_Z2xZ2_2_2.txt  Geometry_Z2xZ2_2_3.txt  Geometry_Z2xZ2_2_4.txt  Geometry_Z2xZ2_2_5.txt  Geometry_Z2xZ2_2_6.txt  Geometry_Z2xZ2_3_1.txt  Geometry_Z2xZ2_3_2.txt  Geometry_Z2xZ2_3_3.txt  Geometry_Z2xZ2_3_4.txt  Geometry_Z2xZ2_4_1.txt  Geometry_Z2xZ2_4_2.txt  Geometry_Z2xZ2_5_1.txt  Geometry_Z2xZ2_5_2.txt  Geometry_Z2xZ2_5_3.txt  Geometry_Z2xZ2_5_4.txt  Geometry_Z2xZ2_5_5.txt  Geometry_Z2xZ2_6_1.txt  Geometry_Z2xZ2_6_2.txt  Geometry_Z2xZ2_6_3.txt  Geometry_Z2xZ2_7_1.txt  Geometry_Z2xZ2_7_2.txt  Geometry_Z2xZ2_8_1.txt  Geometry_Z2xZ2_9_1.txt  Geometry_Z2xZ2_9_2.txt  Geometry_Z2xZ2_9_3.txt  Geometry_Z2xZ4_10_1.txt  Geometry_Z2xZ4_10_2.txt  (+98 more)
Models/ZN models/: modelZ12-I_2.txt  modelZ12II_1.txt  modelZ4_2.txt  modelZ4_3.txt  modelZ6-I_1.txt  modelZ6-I_2.txt  modelZ7_1.txt  modelZ8-II_1.txt  modelZ8II_2.txt  modelZ8I_1.txt
Models/ZN_models/: modelZ12-I_1_1.txt  modelZ3_1_1.txt  modelZ4_1_1.txt  modelZ6-II_1_1.txt  modelZ6-II_3-1.txt  modelZ6-II_4_1.txt  modelZ6II_2.txt  modelZ8I_2.txt  modelZ8_I-3-1.txt
Models/ZNxZM models/: modelZ2xZ2-I_1_2.txt  modelZ2xZ2_1_1.txt  modelZ2xZ2_1_2.txt  modelZ2xZ2_1_3.txt  modelZ2xZ2_2_1.txt  (+58 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: README.md
src/io/: io.cc  (+4 more)
src/orbifolder/: Makefile  Makefile.am  Makefile.in  canalysemodel.cpp  canalysemodel.h  cfield.cpp  cfield.h  cfixedpoint.cpp  cfixedpoint.h  cgaugeinvariance.cpp  cgaugeinvariance.h  chalfstate.cpp  chalfstate.h  chugeint.cpp  chugeint.h  cinequivalentspectra.cpp  cinequivalentspectra.h  cinequivalentspectra_old.cpp  cinequivalentspectra_old.h  clatticevector.cpp  clatticevector.h  clinalg.cpp  clinalg.h  cmassmatrix.cpp  cmassmatrix.h  cmonomial.cpp  cmonomial.h  corbifold.cpp  corbifold.h  corbifoldcore.cpp  corbifoldcore.h  corbifoldgroup.cpp  corbifoldgroup.h  corbifoldgroupelement.cpp  corbifoldgroupelement.h  coscillator.cpp  coscillator.h  cprint.cpp  cprint.h  cprint_new.cpp  (+35 more)
src/orbifolder/.deps/: canalysemodel.Po  cfield.Po  cfixedpoint.Po  cgaugeinvariance.Po  chalfstate.Po  chugeint.Po  cinequivalentspectra.Po  clatticevector.Po  clinalg.Po  cmassmatrix.Po  cmonomial.Po  corbifold.Po  corbifoldcore.Po  corbifoldgroup.Po  corbifoldgroupelement.Po  coscillator.Po  cprint.Po  cprompt.Po  crandommodel.Po  csector.Po  cshiftvector.Po  cspacegroup.Po  cspacegroupelement.Po  cspectrum.Po  cstate.Po  ctwist.Po  cvector.Po  cwilsonline.Po  cwilsonlines.Po  cyukawacouplings.Po  globalfunctions.Po  main.Po
(+107 files in other folders)
