AM_CPPFLAGS = -I../io -I../linalg -I../groupTheory $(GSL_CFLAGS) $(BOOST_CPPFLAGS)
foo2_PROGRAMS = orbifolder
orbifolder_SOURCES = canalysemodel.cpp chugeint.h corbifoldcore.cpp cprint.h cspacegroupelement.h cwilsonline.h canalysemodel.h cinequivalentspectra.cpp corbifoldcore.h cprompt.cpp cspacegroup.h cwilsonlines.cpp cfield.cpp cinequivalentspectra.h corbifold.cpp cprompt.h cspectrum.cpp cwilsonlines.h cfield.h clatticevector.cpp corbifoldgroup.cpp crandommodel.cpp cspectrum.h cfixedpoint.cpp clatticevector.h corbifoldgroupelement.cpp crandommodel.h cstate.cpp cfixedpoint.h clinalg.cpp corbifoldgroupelement.h csector.cpp cstate.h globalfunctions.cpp cgaugeinvariance.cpp clinalg.h corbifoldgroup.h csector.h ctwist.cpp globalfunctions.h cgaugeinvariance.h corbifold.h cshiftvector.cpp ctwist.h main.cpp chalfstate.cpp coscillator.cpp cshiftvector.h cvector.cpp chalfstate.h cmonomial.cpp coscillator.h cspacegroup.cpp cvector.h chugeint.cpp cmonomial.h cprint.cpp cspacegroupelement.cpp cwilsonline.cpp

orbifolder_LDADD = ../io/libio.a ../linalg/liblinalg.a ../groupTheory/libgroupTheory.a $(GSL_LIBS) $(BOOST_LDFLAGS)
